fix otp problem

--- a/templates/verify_otp.html
+++ b/templates/verify_otp.html
@@ -9,6 +9,16 @@
         font-family: Arial, sans-serif;
         padding: 4rem;
       }
+      button {
+        padding: 2px 8px;
+        cursor: pointer;
+        margin-top: 1rem;
+      }
+      a {
+        display: block;
+        text-decoration: none;
+        margin-top: 1rem;
+      }
     </style>
   </head>
   <body>
